--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</style>
 	<head>
 		<meta charset="utf-8">
-		<title>立体多维美化包下载</title>
+		<title>美化包下载</title>
 	</head>
 	<body>
 		<div style="font-size:25px">
@@ -46,6 +46,9 @@
 		<br>
 		<br>
 		<a href="https://www.afdian.net/@litiduowei">有能力来这里捐助a！（直接点击）</a>
+		<br>
+		<br>
+		<p><left><font color="#000000">简介上传中，请等待</font></left></p>
 		<div align="center">
 			<font color="#FF0000">
 				<div style="font-size:30px">
