--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					&nbsp
 					&nbsp
 					&nbsp
-					<a href="https://www.afdian.net/@litiduowei">前往购买完整版</a>
+					<a href="https://www.afdian.net/@litiduowei">完整版整改中，暂不开放下载</a>
 				</div>
 			</font>
 		</div>
